# advent-of-code

./: .gitignore  LICENSE  README.md
2021/: day10.py  day14.py  day15.py  day17.py  go.mod  main.go
2021/c#/: aoc2021.sln
2021/c#/Main/: Main.csproj  Program.cs
2021/c#/MySolutions/: Day12.cs
2021/c#/MySolutions.Tests/: Day12Test.cs  MySolutions.Tests.csproj
2021/cpp/: CMakeLists.txt  all_tests.cpp  runner.cpp  utils.h
2021/cpp/solutions/: day11.h
2021/java/: pom.xml
2021/java/src/main/java/com/ybb/aoc/: App.java  Utils.java
2021/java/src/main/java/com/ybb/aoc/y2021/: Day09.java
2021/java/src/test/java/com/ybb/aoc/y2021/: Day09Test.java
2021/solutions/: Day03.go  Day04.go  Day05.go  Day06.go  Day07.go  Day08.go  Day13.go  utils.go
